Fix HTML template loading issue for email scheduler - use InputStream instead of File for JAR/WAR compatibility